--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 	<h3>TD1</h3>
-	<a href="TD1/index.html">Exercice 1,2 et 3</a><br/>
+	<a href="TD1/EXO1.html">Exercice 1</a><br/>
+	<a href="TD1/EXO2.html">Exercice 2</a><br/>
+	<a href="TD1/EXO3.html">Exercice 3</a><br/>
 	<h3>TD2</h3>
 	<a href="TD2/ex1.html">Exercice 1</a><br/>
 	<a href="TD2/ex2.html">Exercice 2</a><br/>
