--- a/TD1/EXO2.html
+++ b/TD1/EXO2.html
@@ -3,33 +3,32 @@
 <head>
   <title>Ex2</title>
 </head>
-<body>
+<body ontouchstart="return false" deviceorientation deviceorientationabsolute devicemotion>
     <h1>Orientation du smartphone</h1>
-    <p>Alpha: <span id="alpha"></span></p>
-    <p>Beta: <span id="beta"></span></p>
-    <p>Gamma: <span id="gamma"></span></p>
-    
+    <p id="alpha"></p>
+    <p id="beta"></p>
+    <p id="gamma"></p>
     <h1>Mouvement du smartphone</h1>
-    <p>Accélération en rotation X: <span id="rotation-x"></span></p>
-    <p>Accélération en rotation Y: <span id="rotation-y"></span></p>
-    <p>Accélération en rotation Z: <span id="rotation-z"></span></p>
-    <p>Accélération en translation X: <span id="translation-x"></span></p>
-    <p>Accélération en translation Y: <span id="translation-y"></span></p>
-    <p>Accélération en translation Z: <span id="translation-z"></span></p>
+    <p id="accelerationX"></p>
+    <p id="accelerationY"></p>
+    <p id="accelerationZ"></p>
+    <p id="rotationRateAlpha"></p>
+    <p id="rotationRateBeta"></p>
+    <p id="rotationRateGamma"></p>
     <script>
         window.addEventListener('deviceorientation', (event) => {
-            document.getElementById('alpha').innerHTML = event.alpha;
-            document.getElementById('beta').innerHTML = event.beta;
-            document.getElementById('gamma').innerHTML = event.gamma;
+            document.getElementById('alpha').textContent = event.alpha;
+            document.getElementById('beta').textContent = event.beta;
+            document.getElementById('gamma').textContent = event.gamma;
         });
 
         window.addEventListener('devicemotion', (event) => {
-            document.getElementById('rotation-x').innerHTML = event.rotationRate.beta;
-            document.getElementById('rotation-y').innerHTML = event.rotationRate.gamma;
-            document.getElementById('rotation-z').innerHTML = event.rotationRate.alpha;
-            document.getElementById('translation-x').innerHTML = event.acceleration.x;
-            document.getElementById('translation-y').innerHTML = event.acceleration.y;
-            document.getElementById('translation-z').innerHTML = event.acceleration.z;
+            document.getElementById('accelerationX').textContent = event.acceleration.x;
+            document.getElementById('accelerationY').textContent = event.acceleration.y;
+            document.getElementById('accelerationZ').textContent = event.acceleration.z;
+            document.getElementById('rotationRateAlpha').textContent = event.rotationRate.alpha;
+            document.getElementById('rotationRateBeta').textContent = event.rotationRate.beta;
+            document.getElementById('rotationRateGamma').textContent = event.rotationRate.gamma;
         });
     </script>
 </body>
