--- a/TD1/EXO1.html
+++ b/TD1/EXO1.html
@@ -4,7 +4,7 @@
   <title>Exo1</title>
 </head>
 <body>
-  <h1>Exo1</h1>
+  <h1>Watch Position</h1>
   <div id="position"></div>
   <div id="accuracy"></div>
   <div id="speed"></div>
