--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<a href="TD1/EXO2.html">Exercice 2</a><br/>
 	<a href="TD1/EXO3.html">Exercice 3</a><br/>
 	<h3>TD2</h3>
-	<a href="TD2/ex1.html">Exercice 1</a><br/>
-	<a href="TD2/ex2.html">Exercice 2</a><br/>
-	<a href="TD2/index.html">Exercice 3</a><br/>
+	<a href="TD2/EXO1.html">Exercice 1</a><br/>
+	<a href="TD2/EXO2.html">Exercice 2</a><br/>
+	<a href="TD2/EXO3.html">Exercice 3</a><br/>
 	<h3>TD3</h3>
 	<a href="TD3/1/index.html">Exercice 1</a><br/>
 	<a href="TD3/2/index.html">Exercice 2</a><br/>
