--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ex2</title>
+  <title>Exo2</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 </head>
-<body ontouchstart="return false" deviceorientation deviceorientationabsolute devicemotion>
-    <h1>Orientation du smartphone</h1>
-    <p id="alpha"></p>
-    <p id="beta"></p>
-    <p id="gamma"></p>
-    <h1>Mouvement du smartphone</h1>
-    <p id="accelerationX"></p>
-    <p id="accelerationY"></p>
-    <p id="accelerationZ"></p>
-    <p id="rotationRateAlpha"></p>
-    <p id="rotationRateBeta"></p>
-    <p id="rotationRateGamma"></p>
-    <script>
-        window.addEventListener('deviceorientation', (event) => {
-            document.getElementById('alpha').textContent = event.alpha;
-            document.getElementById('beta').textContent = event.beta;
-            document.getElementById('gamma').textContent = event.gamma;
-        });
+<body>
+  <div id="map" style="height: 800px;"></div>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+  <script>
+    var map = L.map('map').setView([51.505, -0.09], 13);
+    L.tileLayer.stamen('terrain').addTo(map);
 
-        window.addEventListener('devicemotion', (event) => {
-            document.getElementById('accelerationX').textContent = event.acceleration.x;
-            document.getElementById('accelerationY').textContent = event.acceleration.y;
-            document.getElementById('accelerationZ').textContent = event.acceleration.z;
-            document.getElementById('rotationRateAlpha').textContent = event.rotationRate.alpha;
-            document.getElementById('rotationRateBeta').textContent = event.rotationRate.beta;
-            document.getElementById('rotationRateGamma').textContent = event.rotationRate.gamma;
-        });
-    </script>
+    var bermudaTriangle = L.polygon([    [32.3078, -64.7505], [25.3444, -71.6693], [18.4207, -79.9956],], {color: 'red'}).addTo(map);
+    var center = bermudaTriangle.getBounds().getCenter();
+    L.circle(center, {radius: 100000}).addTo(map);
+
+    var point1 = turf.point([5.3698, 43.2969]); // Marseille
+    var point2 = turf.point([7.2661, 43.7031]); // Nice
+    var distance = turf.distance(point1, point2);
+    console.log(distance + " metres");
+    L.marker([5.3698, 43.2969]).bindPopup("Distance de Marseille à Nice :" + distance +" metres").addTo(map);
+  </script>
 </body>
 </html>
