--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -10,7 +10,10 @@
   <script type="text/javascript" src="https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js?v1.3.0"></script>
   <script>
     var map = L.map('map').setView([51.505, -0.09], 13);
-    L.tileLayer.stamen('terrain').addTo(map);
+    L.tileLayer("https://stamen-tiles.a.ssl.fastly.net/toner/%7Bz%7D/%7Bx%7D/%7By%7D.png", {
+                attribution: "Map tiles by <a href='http://stamen.com/%27%3EStamen Design</a>, under <a href='http://creativecommons.org/licenses/by/3.0%27%3ECC BY 3.0</a>. Data by <a href='http://openstreetmap.org/%27%3EOpenStreetMap</a>, under <a href='http://www.openstreetmap.org/copyright%27%3EODbL</a>.",
+                maxZoom: 18,
+            }).addTo(map);
 
     var bermudaTriangle = L.polygon([    [32.3078, -64.7505], [25.3444, -71.6693], [18.4207, -79.9956],], {color: 'red'}).addTo(map);
     var center = bermudaTriangle.getBounds().getCenter();
