--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -8,9 +8,9 @@
   <div id="map" style="height: 800px;"></div>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
   <script type="text/javascript" src="https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js?v1.3.0"></script>
+  <script src='https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js'></script>
   <script>
     var map = L.map('map');
-    //L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'}).addTo(map);
     var layer = new L.StamenTileLayer("toner");
     map.addLayer(layer);
 
@@ -30,9 +30,9 @@
 
     var point1 = turf.point([5.3698, 43.2969]); // Marseille
     var point2 = turf.point([7.2661, 43.7031]); // Nice
-    var distance = turf.distance(point1, point2);
-    console.log(distance + " metres");
-    L.marker([5.3698, 43.2969]).bindPopup("Distance de Marseille à Nice :" + distance +" metres").addTo(map);
+    var distance = turf.distance(point1, point2) / 1000;
+    console.log(distance + " kilometres");
+    L.marker([5.3698, 43.2969]).bindPopup("Distance de Marseille à Nice :" + distance +" kilometres").addTo(map);
   </script>
 </body>
 </html>
