--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -11,7 +11,7 @@
   <script src='https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js'></script>
   <script>
     var map = L.map('map');
-    var layer = new L.StamenTileLayer("terrain");
+    var layer = new L.StamenTileLayer("toner");
     map.addLayer(layer);
     map.setView([5.374814946336128, 43.29835984870036], 18);
 
