--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -11,9 +11,10 @@
   <script src='https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js'></script>
   <script>
     var map = L.map('map');
-    var layer = new L.StamenTileLayer("toner");
+    var layer = new L.StamenTileLayer("terrain");
     map.addLayer(layer);
-    map.setView([5.374814946336128, 43.29835984870036], 18);
+    map.setView([5.374814946336128, 43.29835984870036], 1);
+    L.marker([43.7031, 7.2661]).addTo(map);
 
     var bermudaTriangle = L.polygon([[26.184854115730644, -80.11538010241617], [32.25277271502241, -64.86937525295237], [18.46936352424342, -66.7281631227401],], {color: 'red'}).addTo(map);
     var center = bermudaTriangle.getBounds().getCenter();
