--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -18,7 +18,7 @@
 
     var bermudaTriangle = L.polygon([[26.184854115730644, -80.11538010241617], [32.25277271502241, -64.86937525295237], [18.46936352424342, -66.7281631227401],], {color: 'red'}).addTo(map);
     var center = bermudaTriangle.getBounds().getCenter();
-    L.circle(center, {radius: 950000}).addTo(map);
+    L.circle(center, {radius: 100000}).addTo(map);
 
     var marseille = [43.29835984870036, 5.374814946336128];
     var nice = [43.70576240066641, 7.258902536984215];
@@ -30,7 +30,7 @@
         marseille,  // Marseille
         nice   // Nice
     ]).addTo(map);
-    L.marker(nice).bindPopup("Distance de Marseille à Nice :" + distance +" kilometres").addTo(map);
+    L.marker(marseille).bindPopup("Distance de Marseille à Nice :" + distance +" kilometres").addTo(map);
   </script>
 </body>
 </html>
