--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -17,7 +17,7 @@
     L.marker([43.7031, 7.2661]).addTo(map);
 
     var bermudaTriangle = L.polygon([[26.184854115730644, -80.11538010241617], [32.25277271502241, -64.86937525295237], [18.46936352424342, -66.7281631227401],], {color: 'red'}).addTo(map);
-    var center = bermudaTriangle.getBounds().getCenter();
+    var center = bermudaTriangle.getCenter();
     L.circle(center, {radius: 100000}).addTo(map);
 
     var marseille = [43.29835984870036, 5.374814946336128];
