--- a/TD2/EXO3.html
+++ b/TD2/EXO3.html
@@ -9,22 +9,24 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
-   var map = L.map('map').setView([43.71, 7.26], 13);
+   // Initialisation de la carte
+   var map = L.map('map').setView([43.6, 7.2], 8);
 
+   // Ajout de la tuile de base
    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
    }).addTo(map);
 
-   $.getJSON("http://opendata.nicecotedazur.org/api/records/1.0/search/?dataset=stations-velos-nice&rows=100&facet=name&facet=address", function(data) {
-      var geojson = L.geoJson(data, {
-         pointToLayer: function (feature, latlng) {
-               return L.marker(latlng);
-         },
-         onEachFeature: function (feature, layer) {
-               layer.bindPopup(feature.properties.name);
+   // Récupération des données de l'API INSEE
+   $.getJSON('https://www.insee.fr/fr/metadonnees/cog/departement/DEP06-alpes-maritimes', function(data) {
+      // Ajout des données à la carte
+      L.geoJSON(data, {
+         style: {
+               color: 'red',
+               weight: 2,
+               opacity: 1
          }
-      });
-      geojson.addTo(map);
+      }).addTo(map);
    });
   </script>
 </body>
