--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -16,9 +16,16 @@
     map.setView([43.70576240066641, 7.258902536984215], 5);
     L.marker([43.70576240066641, 7.258902536984215]).addTo(map);
 
-    var bermudaTriangle = L.polygon([[26.184854115730644, -80.11538010241617], [32.25277271502241, -64.86937525295237], [18.46936352424342, -66.7281631227401],], {color: 'red'}).addTo(map);
-    var center = bermudaTriangle.getCenter();
-    L.circle(center, {radius: 100000}).addTo(map);
+    navigator.geolocation.getCurrentPosition(function(position) {
+    var latlng = [position.coords.latitude, position.coords.longitude];
+    var accuracy = position.coords.accuracy;
+    
+    L.circle(latlng, accuracy, {
+        color: 'red',
+        fillColor: '#f03',
+        fillOpacity: 0.5
+    }).addTo(map);
+});
 
     var marseille = [43.29835984870036, 5.374814946336128];
     var nice = [43.70576240066641, 7.258902536984215];
