--- a/TD2/EXO2.html
+++ b/TD2/EXO2.html
@@ -17,11 +17,12 @@
     L.marker([43.70576240066641, 7.258902536984215]).addTo(map);
 
     navigator.geolocation.getCurrentPosition(function(position) {
-    var latlng = [position.coords.latitude, position.coords.longitude];
-    var accuracy = position.coords.accuracy;
-    
-    L.circle(latlng, accuracy).addTo(map);
-});
+        var latlng = [position.coords.latitude, position.coords.longitude];
+        var accuracy = position.coords.accuracy;
+        console.log(accuracy);
+        
+        L.circle(latlng, accuracy).addTo(map);
+    });
 
     var marseille = [43.29835984870036, 5.374814946336128];
     var nice = [43.70576240066641, 7.258902536984215];
