--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 	<a href="TD2/EXO2.html">Exercice 2</a><br/>
 	<a href="TD2/EXO3.html">Exercice 3</a><br/>
 	<h3>TD3</h3>
-	<a href="TD3/1/index.html">Exercice 1</a><br/>
-	<a href="TD3/2/index.html">Exercice 2</a><br/>
-	<a href="TD3/3/index.html">Exercice 3</a><br/>
+	<a href="TD3/EXO1.html">Exercice 1</a><br/>
+	<a href="TD3/EXO2.html">Exercice 2</a><br/>
+	<a href="TD3/EXO3.html">Exercice 3</a><br/>
+	<a href="TD3/EXO4.html">Exercice 4</a><br/>
 	<h3>TD4</h3>
 	<a href="TD4/index.html">Exercice 1</a><br/>
 	<a href="TD4/index2.html">Exercice 2</a><br/>
