--- a/TD3/EXO4.html
+++ b/TD3/EXO4.html
@@ -12,8 +12,8 @@
    <script type="importmap">
    {
       "imports": {
-         "three": "https://unpkg.com/three@<version>/build/three.module.js",
-         "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
+         "three": "https://unpkg.com/three@0.148.0/build/three.module.js",
+         "three/addons/": "https://unpkg.com/three@0.148.0/examples/jsm/"
       }
    }
    </script>
@@ -23,44 +23,44 @@
       import * as THREE from 'three';
       import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
       import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+      
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
+
+      const renderer = new THREE.WebGLRenderer();
+      renderer.setSize( window.innerWidth, window.innerHeight );
+      document.body.appendChild( renderer.domElement );
+
+      const geometry = new THREE.BoxGeometry( 1, 1, 1 );
+      const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+      const cube = new THREE.Mesh( geometry, material );
+      scene.add( cube );
 
       // Instantiate a loader
-const loader = new GLTFLoader();
+      var loader = new GLTFLoader();
+      loader.load("media/capybara_bath/scene.gltf", function(gltf) {
+         scene.add(gltf.scene);
+      });
 
-// Optional: Provide a DRACOLoader instance to decode compressed mesh data
-const dracoLoader = new DRACOLoader();
-dracoLoader.setDecoderPath( '/examples/jsm/libs/draco/' );
-loader.setDRACOLoader( dracoLoader );
+      // Charger une texture
+      const texture = new THREE.TextureLoader().load( 'media/cr7.jpg' );
 
-// Load a glTF resource
-loader.load(
-	// resource URL
-	'models/gltf/duck/duck.gltf',
-	// called when the resource is loaded
-	function ( gltf ) {
+      // Appliquer la texture à un matériau
+      material.map = texture;
+      material.needsUpdate = true;
 
-		scene.add( gltf.scene );
+      camera.position.z = 5;
 
-		gltf.animations; // Array<THREE.AnimationClip>
-		gltf.scene; // THREE.Group
-		gltf.scenes; // Array<THREE.Group>
-		gltf.cameras; // Array<THREE.Camera>
-		gltf.asset; // Object
+      function animate() {
+         requestAnimationFrame( animate );
 
-	},
-	// called while loading is progressing
-	function ( xhr ) {
+         cube.rotation.x += 0.01;
+         cube.rotation.y += 0.01;
 
-		console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
+         renderer.render( scene, camera );
+      };
 
-	},
-	// called when loading has errors
-	function ( error ) {
-
-		console.log( 'An error happened' );
-
-	}
-);
+      animate();
 
    </script>
 </body>
