--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 	<a href="TD3/EXO3.html">Exercice 3</a><br/>
 	<a href="TD3/EXO4.html">Exercice 4</a><br/>
 	<h3>TD4</h3>
-	<a href="TD4/index.html">Exercice 1</a><br/>
-	<a href="TD4/index2.html">Exercice 2</a><br/>
+	<a href="TD4/EXO1.html">Exercice 1</a><br/>
 	<h3>Projet</h3>
 	<a href="MonProjet/index.html">mon projet JS</a><br/>
 </body>
