--- a/TD4/EXO1.html
+++ b/TD4/EXO1.html
@@ -27,7 +27,7 @@
 
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-			camera.position.set(2,0,5);
+			camera.position.set(0,0,10);
 
 			const renderer = new THREE.WebGLRenderer();
 			renderer.setSize( window.innerWidth, window.innerHeight );
@@ -53,6 +53,34 @@
 			earth.position.set(-5,0,0);
 			scene.add( earth ) ;
 
+
+			// Instantiate a loader
+			const loader = new GLTFLoader();
+
+			// Load a glTF resource
+			let duck ;
+			loader.load(
+				// resource URL
+				'models/Duck.gltf',
+				// called when the resource is loaded
+				function ( gltf ) {
+
+					scene.add( gltf.scene );
+					duck=gltf.scene ;
+				},
+				// called while loading is progressing
+				function ( xhr ) {
+
+					console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
+
+				},
+				// called when loading has errors
+				function ( error ) {
+
+					console.log( 'An error happened' );
+
+				}
+			);
 
 		</script>
 	</body>
