--- a/TD4/EXO1.html
+++ b/TD4/EXO1.html
@@ -27,7 +27,7 @@
 
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-			camera.position.set(0,0,10);
+			camera.position.set(2,0,5);
 
 			const renderer = new THREE.WebGLRenderer();
 			renderer.setSize( window.innerWidth, window.innerHeight );
@@ -42,7 +42,6 @@
 
 			const cube = new THREE.Mesh( geometry, materialTex );
 			cube.position.set(3,0,0);
-			scene.add( cube );
 
 			const controls = new OrbitControls( camera, renderer.domElement );
 
@@ -65,7 +64,6 @@
 				// called when the resource is loaded
 				function ( gltf ) {
 
-					scene.add( gltf.scene );
 					duck=gltf.scene ;
 				},
 				// called while loading is progressing
@@ -81,6 +79,28 @@
 
 				}
 			);
+
+
+			// White directional light at half intensity shining from the top.
+			const directionalLight = new THREE.DirectionalLight( 0xffffff, 1.5 );
+			scene.add( directionalLight );
+
+			const animate = function () {
+				requestAnimationFrame( animate );
+
+				cube.rotation.x += 0.01;
+				cube.rotation.y += 0.01;
+
+				renderer.render( scene, camera );
+			};
+
+			animate();
+
+ if(window.DeviceOrientationEvent) {
+    window.addEventListener('deviceorientation', function(orientation) {
+      if(duck !== undefined) duck.rotation.set(0, -orientation.alpha * (Math.PI / 180), 0) ; ;
+    }) ;
+  }
 
 		</script>
 	</body>
