--- a/TD4/EXO1.html
+++ b/TD4/EXO1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>My first three.js app</title>
+		<title>TP4</title>
 		<style>
 			body { margin: 0; }
 		</style>
@@ -27,80 +27,91 @@
 
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-			camera.position.set(0,0,0);
+			camera.position.set(0,0,15);
 
 			const renderer = new THREE.WebGLRenderer();
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
 
-			const geometry = new THREE.BoxBufferGeometry();
-			const material = new THREE.MeshPhongMaterial( { color: 0x00ff00 } );
-			const texture = new THREE.TextureLoader().load( 'textures/texture.jpg' );
-
-			// immediately use the texture for material creation
-			const materialTex = new THREE.MeshPhongMaterial( { map: texture } );
-
-			const cube = new THREE.Mesh( geometry, materialTex );
-			cube.position.set(3,0,0);
-
 			const controls = new OrbitControls( camera, renderer.domElement );
 
-			const geometryE = new THREE.SphereGeometry(1, 32, 32);
+			const geometryE = new THREE.SphereGeometry(10, 128, 128);
 			const textureE = new THREE.TextureLoader().load( './textures/2k_earth_daymap.jpg' );
 			const materialTexE = new THREE.MeshBasicMaterial( { map: textureE } );
 			const earth = new THREE.Mesh( geometryE, materialTexE );
-			earth.position.set(-5,0,0);
+			earth.position.set(0,0,0);
 			scene.add( earth ) ;
 
 
-			// Instantiate a loader
-			const loader = new GLTFLoader();
+            function latLongToVector3(lat, lon, radius) {
+                var phi = (lat)*Math.PI/180;
+                var theta = (lon-180)*Math.PI/180;
 
-			// Load a glTF resource
-			let duck ;
-			loader.load(
-				// resource URL
-				'models/Duck.gltf',
-				// called when the resource is loaded
-				function ( gltf ) {
+                var x = -(radius) * Math.cos(phi) * Math.cos(theta);
+                var y = (radius) * Math.sin(phi);
+                var z = (radius) * Math.cos(phi) * Math.sin(theta);
 
-					duck=gltf.scene ;
-				},
-				// called while loading is progressing
-				function ( xhr ) {
+                return new THREE.Vector3(x,y,z);
+            }
 
-					console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
+            var xhr = new XMLHttpRequest();
+            xhr.open('GET', 'https://restcountries.com/v3.1/all', true);
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    var countries = JSON.parse(xhr.responseText);
+                    for (var i = 0; i < countries.length; i++) {
+                        var lat = countries[i].latlng[0];
+                        var lon = countries[i].latlng[1];
+                        var position = latLongToVector3(lat, lon, 10);
+                        const textureE = new THREE.TextureLoader().load( countries[i].flags.png );
+                        var marker = new THREE.Mesh(new THREE.SphereGeometry(0.1, 32, 32),
+                            new THREE.MeshBasicMaterial({ map: textureE }));
+                        marker.position.set(position.x, position.y, position.z);
+                        scene.add(marker);
+                    }
+                }
+            };
+            xhr.send();
 
-				},
-				// called when loading has errors
-				function ( error ) {
+            navigator.geolocation.getCurrentPosition(function (position) {
+            var lat = position.coords.latitude;
+            var lng = position.coords.longitude;
 
-					console.log( 'An error happened' );
+            var myPos = latLongToVector3(lat, lng, 10)
 
-				}
-			);
+            const pointGeometry = new THREE.SphereGeometry(0.1, 32, 32);
+            const pointTexture = new THREE.TextureLoader().load( './textures/texture.jpg' );
+            const pointMaterial = new THREE.MeshBasicMaterial({ map: pointTexture });
+            const point = new THREE.Mesh(pointGeometry, pointMaterial);
+            point.position.set(myPos.x, myPos.y, myPos.z);
 
+            scene.add(point);
 
-			// White directional light at half intensity shining from the top.
-			const directionalLight = new THREE.DirectionalLight( 0xffffff, 1.5 );
-			scene.add( directionalLight );
+            const loader = new GLTFLoader()
+                loader.load(
+                    "./models/Soldier.glb",
+                    function (gltf) {
+                        model = gltf.scene;
+                    
+                        model.scale.set(0.005, 0.005, 0.005);
+                        model.position.set(myPos.x, myPos.y, myPos.z);
+                        model.rotation.set(2, 2, 4.5);
 
-			const animate = function () {
+                        scene.add(model);
+                    },
+                    undefined,
+                    function (error) {
+                        console.error(error);
+                    }
+                )
+            })
+
+            const animate = function () {
 				requestAnimationFrame( animate );
-
-				cube.rotation.x += 0.01;
-				cube.rotation.y += 0.01;
 
 				renderer.render( scene, camera );
 			};
-
 			animate();
-
- if(window.DeviceOrientationEvent) {
-    window.addEventListener('deviceorientation', function(orientation) {
-      if(duck !== undefined) duck.rotation.set(0, -orientation.alpha * (Math.PI / 180), 0) ; ;
-    }) ;
-  }
 
 		</script>
 	</body>
