--- a/TD4/EXO1.html
+++ b/TD4/EXO1.html
@@ -25,20 +25,20 @@
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
-			const scene = new THREE.Scene();
-			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
+			var scene = new THREE.Scene();
+			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 			camera.position.set(0,0,15);
 
-			const renderer = new THREE.WebGLRenderer();
+			var renderer = new THREE.WebGLRenderer();
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
 
-			const controls = new OrbitControls( camera, renderer.domElement );
+			var controls = new OrbitControls( camera, renderer.domElement );
 
-			const geometryE = new THREE.SphereGeometry(10, 128, 128);
-			const textureE = new THREE.TextureLoader().load( './textures/2k_earth_daymap.jpg' );
-			const materialTexE = new THREE.MeshBasicMaterial( { map: textureE } );
-			const earth = new THREE.Mesh( geometryE, materialTexE );
+			var geometryE = new THREE.SphereGeometry(10, 128, 128);
+			var textureE = new THREE.TextureLoader().load( './textures/2k_earth_daymap.jpg' );
+			var materialTexE = new THREE.MeshBasicMaterial( { map: textureE } );
+			var earth = new THREE.Mesh( geometryE, materialTexE );
 			earth.position.set(0,0,0);
 			scene.add( earth ) ;
 
@@ -63,7 +63,7 @@
                         var lat = countries[i].latlng[0];
                         var lon = countries[i].latlng[1];
                         var position = latLongToVector3(lat, lon, 10);
-                        const textureE = new THREE.TextureLoader().load( countries[i].flags.png );
+                        var textureE = new THREE.TextureLoader().load( countries[i].flags.png );
                         var marker = new THREE.Mesh(new THREE.SphereGeometry(0.1, 32, 32),
                             new THREE.MeshBasicMaterial({ map: textureE }));
                         marker.position.set(position.x, position.y, position.z);
@@ -79,21 +79,13 @@
 
             var myPos = latLongToVector3(lat, lng, 10)
 
-            const pointGeometry = new THREE.SphereGeometry(0.1, 32, 32);
-            const pointTexture = new THREE.TextureLoader().load( './textures/texture.jpg' );
-            const pointMaterial = new THREE.MeshBasicMaterial({ map: pointTexture });
-            const point = new THREE.Mesh(pointGeometry, pointMaterial);
-            point.position.set(myPos.x, myPos.y, myPos.z);
-
-            scene.add(point);
-
             const loader = new GLTFLoader()
                 loader.load(
                     "./models/Soldier.glb",
                     function (gltf) {
-                        model = gltf.scene;
+                        var model = gltf.scene;
                     
-                        model.scale.set(0.005, 0.005, 0.005);
+                        model.scale.set(0.1, 0.1, 0.1);
                         model.position.set(myPos.x, myPos.y, myPos.z);
                         model.rotation.set(2, 2, 4.5);
 
