--- a/TD4/EXO1.html
+++ b/TD4/EXO1.html
@@ -67,6 +67,10 @@
                         var marker = new THREE.Mesh(new THREE.SphereGeometry(0.1, 32, 32),
                             new THREE.MeshBasicMaterial({ map: textureE }));
                         marker.position.set(position.x, position.y, position.z);
+			marker.addEventListener("click", function() {
+			    window.open(`https://en.wikipedia.org/wiki/` + countries[i].translations.fra.common);
+			});
+			console.log(countries[i].translations.fra.common);
                         scene.add(marker);
                     }
                 }
