--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 	<h3>TD4</h3>
 	<a href="TD4/EXO1.html">Exercice 1</a><br/>
 	<h3>Projet</h3>
-	<a href="MonProjet/index.html">mon projet JS</a><br/>
+	<a href="projet/index.html">mon projet JS</a><br/>
 </body>
 </html>
