--- a/projet/index.html
+++ b/projet/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>TP4</title>
+		<title>Projet</title>
 		<style>
 			body { margin: 0; }
 		</style>
