--- a/projet/index.html
+++ b/projet/index.html
@@ -23,8 +23,7 @@
 		<script type="module">
 			import * as THREE from 'three';
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
-            
-
+        
 
             const renderer = new THREE.WebGLRenderer();
 
@@ -34,12 +33,7 @@
 
             const scene = new THREE.Scene();
 
-            const camera = new THREE.PerspectiveCamera(
-                45,
-                window.innerWidth / window.innerHeight,
-                0.1,
-                1000
-            );
+            const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
 
             const orbit = new OrbitControls(camera, renderer.domElement);
 
@@ -139,15 +133,7 @@
 
                 renderer.render(scene, camera);
             }
-
             renderer.setAnimationLoop(animate);
-
-            window.addEventListener('resize', function() {
-                camera.aspect = window.innerWidth / window.innerHeight;
-                camera.updateProjectionMatrix();
-                renderer.setSize(window.innerWidth, window.innerHeight);
-            });
-
 		</script>
 	</body>
 </html>
