--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<a href="TD3/EXO4.html">Exercice 4</a><br/>
 	<h3>TD4</h3>
 	<a href="TD4/EXO1.html">Exercice 1</a><br/>
+	<h3>TD5</h3>
+	<a href="TD5/EXO1.html">Exercice 1</a><br/>
+	<a href="TD5/EXO2.html">Exercice 2</a><br/>
 	<h3>Projet</h3>
 	<a href="projet/index.html">mon projet JS</a><br/>
 </body>
