--- a/TD5/EXO1.html
+++ b/TD5/EXO1.html
@@ -10,19 +10,21 @@
 	</head>
 	<body>
         <a-scene>
-            <a-entity camera look-controls wasd-controls position="0 1.6 3"></a-entity>
-            <a-box position="-1 0.5 -3" rotation="0 45 0" color="#00FFF0"></a-box>
-            <a-sphere position="0 1.25 -5" radius="1.25" color="#F0FF00"></a-sphere>
-            <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FF00E4"></a-cylinder>
-            <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#FF8C8C"></a-plane>
-            <a-sky color="#00DB00"></a-sky>
-            <a-light type="ambient" color="#445451"></a-light>
-            <a-light type="point" intensity="2" position="2 4 4"></a-light>
-            <a-text font="kelsonsans" value="SIUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUU" width="6" position="-2 2 -1"></a-text>
-            <a-assets>
+            <a-marker type="hiro">
+              <a-entity camera look-controls wasd-controls position="0 1.6 3"></a-entity>
+              <a-box position="-1 0.5 -3" rotation="0 45 0" color="#00FFF0"></a-box>
+              <a-sphere position="0 1.25 -5" radius="1.25" color="#F0FF00"></a-sphere>
+              <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FF00E4"></a-cylinder>
+              <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#FF8C8C"></a-plane>
+              <a-sky color="#00DB00"></a-sky>
+              <a-light type="ambient" color="#445451"></a-light>
+              <a-light type="point" intensity="2" position="2 4 4"></a-light>
+              <a-text font="kelsonsans" value="SIUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUU" width="6" position="-2 2 -1"></a-text>
+              <a-assets>
                 <a-asset-item id="soldat" src="./models/Soldier.glb"></a-asset-item>
-            </a-assets>        
-            <a-gltf-model src="#soldat" rotation="0 180 0"></a-gltf-model>
-        </a-scene>
+              </a-assets>
+              <a-gltf-model src="#soldat" rotation="0 180 0"></a-gltf-model>
+            </a-marker>
+          </a-scene>
 	</body>
 </html>
