--- a/TD5/EXO2.html
+++ b/TD5/EXO2.html
@@ -11,18 +11,10 @@
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs>
-      <a-marker preset="hiro">
-        <a-entity
-          position="0 0 0"
-          scale="0.05 0.05 0.05"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        ></a-entity>
-      </a-marker>
-      <a-entity gps-entity-placeholder latitude="48.8588443" longitude="2.2943506">
-        <a-box position="0 0 0" material="color: yellow;"></a-box>
-      </a-entity>
-      <a-entity camera></a-entity>
-    </a-scene>
+    <a-scene embedded arjs='sourceType: webcam;' renderer='antialias: true; alpha: true; precision: medium;'>
+
+        <a-marker-camera type="pattern" patternUrl="./models/amus.patt"></a-marker-camera>
+		<a-entity camera></a-entity>
+	</a-scene>
   </body>
 </html>
