--- a/TD5/EXO2.html
+++ b/TD5/EXO2.html
@@ -2,21 +2,37 @@
 <html>
     <head>
 		<meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 		<title>TP5</title>
 		<style>
 			body { margin: 0; }
 		</style>
+        <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 	</head>
-  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  <!-- we import arjs version without NFT but with marker + location based support -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs='sourceType: webcam;' renderer='antialias: true; alpha: true; precision: medium;'>
-        <a-marker-camera type="pattern" patternUrl="./models/amus.patt"></a-marker-camera>
-		<a-entity camera type="pattern" patternUrl="./models/amus.patt"></a-entity>
-        <a-entity gps-entity-placeholder latitude="48.8588443" longitude="2.2943506">
-            <a-box position="0 0 0" material="color: yellow;"></a-box>
-        </a-entity>
-	</a-scene>
-  </body>
+    <body>
+        <a-scene embedded arjs>
+          <a-marker preset="hiro">
+            <a-entity position="0 0 -1.6" scale="0.15 0.15 0.15"
+              gltf-model="./models/soldat.glb"></a-entity>
+          </a-marker>
+          <a-entity id="localizedEntity" material='color: pink' geometry='primitive: box' scale="10 10 10"></a-entity>
+          <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+        </a-scene>
+    </body>
+    <script>
+        document.addEventListener(
+            "DOMContentLoaded",
+            function () {
+                navigator.geolocation.getCurrentPosition(function (position) {
+                const lat = position.coords.latitude
+                const lng = position.coords.longitude
+                const entity = document.getElementById("localizedEntity")
+
+                entity.setAttribute("gps-new-entity-place", `latitude: ${lat}; longitude: ${lng}`)
+                })
+            },
+            false
+        )
+    </script>
 </html>
